--- a/tugas8.html
+++ b/tugas8.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 <a href="https://niomic.com " target="_blank">
-    <img src="gambar.jpg"border="4">
+    <img src="image/gambar.jpg"border="4">
 </a>
   </body>
 </html>
